--- a/styles/global.css
+++ b/styles/global.css
@@ -88,3 +88,23 @@ button:hover, .button:hover {
     filter: brightness(1.2);
     transition: filter 0.3s;
 }
+
+button > img, .button > img {
+    margin-right: 1rem;
+    width: 2rem
+}
+
+button.outlined, .button.outlined {
+    background: var(--white);
+    color: var(--blue);
+    border: 0.2rem solid var(--blue);
+}
+
+.content header {
+    width: 80%;
+    margin: 3.7rem auto;
+}
+
+.content header img {
+    width: 16.7rem;
+}
