--- a/styles/home.css
+++ b/styles/home.css
@@ -45,7 +45,9 @@ input {
     padding: 0 1.6rem;
 
 }
-
+input:focus {
+    outline-color: var(--blue);
+}
 input, button, .button {
     width: 100%;
     margin-bottom: 1.8rem;
