--- a/styles/room.css
+++ b/styles/room.css
@@ -95,3 +95,43 @@
     font-size: 1.6rem;
     line-height: 2.4rem;
 }
+
+/* Questions */
+.question-wrapper {
+    background: var(--light-blue);
+    border-radius: 0px 0.8rem 0.8rem 0.8rem;
+    margin-bottom: 1.8rem;
+    padding: 2.4rem;
+}
+
+.question-wrapper .question-content {
+    display: flex;
+    align-items: center;
+}
+
+.question-wrapper .question-content p {
+    display: flex;
+    align-items: center;
+    margin-left: 1.6rem;
+}
+
+.question-wrapper .actions {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.question-wrapper .actions > a {
+    display: flex;
+    align-items: center;
+}
+
+.question-wrapper .actions > a + a {
+    margin-left: 2.4rem;
+
+}
+
+.question-wrapper .actions > a > img {
+    margin-right: 0.8rem;
+}
+
