--- a/styles/room.css
+++ b/styles/room.css
@@ -106,13 +106,24 @@
 
 .question-wrapper .question-content {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+}
+
+.question-wrapper .question-content .user {
+    background: var(--blue);
+    clip-path: circle();
+    padding: 1.3rem;
+
 }
 
 .question-wrapper .question-content p {
     display: flex;
     align-items: center;
     margin-left: 1.6rem;
+    word-break: break-word;
+    display: flex;
+    align-items: center;
+    min-height: 5.5rem;
 }
 
 .question-wrapper .actions {
@@ -135,3 +146,11 @@
     margin-right: 0.8rem;
 }
 
+/* Question Read */
+.question-wrapper.read {
+    background: var(--grey-medium);
+}
+
+.question-wrapper.read .question-content .user {
+    background: var(--grey-blue);
+}
