Modal dos botões na room

--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -59,6 +59,7 @@
 
 #question-form form textarea {
     outline: none;
+    height: 15rem;
     width: 100%;
     resize: none;
     background: none;
