--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -27,7 +27,7 @@
                 <img src="images/logo.svg" alt="Rocket.q Logo">
             </a>
             <div class="buttons">
-                <div class="button outlined">
+                <div class="button outlined" id="room-id" data-id="323243">
                     #323243
                     <img src="images/copy.svg" alt="Copiar número da sala">
                 </div>
@@ -41,7 +41,7 @@
         <main>
             <section id="question-form">
                 <h2>Faça sua pergunta</h2>
-                <form action="">
+                <form action="#" method="POST">
                     <label for="question" class="sr-only">O que você quer perguntar?</label>
                     <textarea name="question" id="question" cols="30" rows="10" placeholder="O que você quer perguntar?"></textarea>
 
@@ -69,11 +69,11 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
+                            <a href="#" class="check" data-id="2">
                                 <img src="images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
+                            <a href="#" class="delete" data-id="2">
                                 <img src="images/trash.svg" alt="Excluir pergunta">
                                 Excluir
                             </a>
@@ -90,11 +90,11 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
+                            <a href="#" class="check" data-id="3">
                                 <img src="images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
+                            <a href="#" class="delete" data-id="3">
                                 <img src="images/trash.svg" alt="Excluir pergunta">
                                 Excluir
                             </a>
@@ -115,7 +115,7 @@
                                 <img src="images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a> -->
-                            <a href="#" class="delete">
+                            <a href="#" class="delete" data-id="1">
                                 <img src="images/trash.svg" alt="Excluir pergunta">
                                 Excluir
                             </a>
@@ -133,7 +133,7 @@
             <h2>Excluir pergunta</h2>
             <p>Tem certeza que você deseja excluir esta pergunta?</p>
 
-            <form action="">
+            <form action="#" method="POST">
                 <label for="password" class="sr-only">Digite sua senha admin</label>
                 <input type="password" name="password" id="password" placeholder="Digite seu senha">
 
