--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -41,7 +41,7 @@
         <main>
             <section id="question-form">
                 <h2>Faça sua pergunta</h2>
-                <form action="#" method="POST">
+                <form action="/question/create/<%= roomId %>" method="POST">
                     <label for="question" class="sr-only">O que você quer perguntar?</label>
                     <textarea name="question" id="question" cols="30" rows="10" placeholder="O que você quer perguntar?"></textarea>
 
@@ -59,28 +59,35 @@
                 <h2 class="sr-only">Perguntas da comunidade</h2>
                 <div class="questions">
                     
-                    <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/images/user.svg" alt="Avatar">
-                            </div>
-                            <div class="question">
-                                <p>Qual a diferença entre var, let e const no JS?</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <a href="#" class="check" data-id="2">
-                                <img src="/images/check.svg" alt="Marcar como lida">
-                                Marcar como lida
-                            </a>
-                            <a href="#" class="delete" data-id="2">
-                                <img src="/images/trash.svg" alt="Excluir pergunta">
-                                Excluir
-                            </a>
-                        </div>
-                    </div>
+                    <% questions.forEach (question => { %>
 
-                    <div class="question-wrapper">
+                        <div class="question-wrapper">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="/images/user.svg" alt="Avatar">
+                                </div>
+                                <div class="question">
+                                    <p><%= question.title %></p>
+                                </div>
+                            </div>
+                            <div class="actions">
+                                <a href="#" class="check" data-id="<%= question.id %>">
+                                    <img src="/images/check.svg" alt="Marcar como lida">
+                                    Marcar como lida
+                                </a>
+                                <a href="#" class="delete" data-id="%= question.id %>">
+                                    <img src="/images/trash.svg" alt="Excluir pergunta">
+                                    Excluir
+                                </a>
+                            </div>
+                        </div>
+                        
+                        <% }); %>
+                        
+
+
+
+                    <!-- <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
                                 <img src="/images/user.svg" alt="Avatar">
@@ -99,28 +106,34 @@
                                 Excluir
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     
-                    <div class="question-wrapper read">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/images/user.svg" alt="Avatar">
+
+                    <% questionsRead.forEach(questionRead => { %>
+
+                        <div class="question-wrapper read">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="/images/user.svg" alt="Avatar">
+                                </div>
+                                <div class="question">
+                                    <p><%= questionRead.title %></p>
+                                </div>
                             </div>
-                            <div class="question">
-                                <p>O que é Script</p>
+                            <div class="actions">
+                                <!-- <a href="#" class="check">
+                                    <img src="/images/check.svg" alt="Marcar como lida">
+                                    Marcar como lida
+                                </a> -->
+                                <a href="#" class="delete" data-id="<%= questionRead.id %>">
+                                    <img src="/images/trash.svg" alt="Excluir pergunta">
+                                    Excluir
+                                </a>
                             </div>
                         </div>
-                        <div class="actions">
-                            <!-- <a href="#" class="check">
-                                <img src="/images/check.svg" alt="Marcar como lida">
-                                Marcar como lida
-                            </a> -->
-                            <a href="#" class="delete" data-id="1">
-                                <img src="/images/trash.svg" alt="Excluir pergunta">
-                                Excluir
-                            </a>
-                        </div>
-                    </div>
+
+                    <% }) %>
+
 
                 </div>
             </section>
