--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,7 +18,8 @@
 <body>
     <div id="home" class="content">
         <header>
-            <a href="/"><img src="/images/logo.svg" alt="Rocket.q Logo"></a>
+            <a href="/"><img src="/images/logo.svg" alt="Rocket.q Logo">
+            </a>
         </header>
     
         <div id="bg">
