--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -59,15 +59,18 @@
                 <h2 class="sr-only">Perguntas da comunidade</h2>
                 <div class="questions">
                     
-                    <% questions.forEach (question => { %>
-
+                    <% if (isNoQuestions){ %>
+                        <%- include('parts/no-question') %>
+                    <% } %>
+                    
+                    <% questions.forEach(question => { %>                            
                         <div class="question-wrapper">
                             <div class="question-content">
                                 <div class="user">
                                     <img src="/images/user.svg" alt="Avatar">
                                 </div>
                                 <div class="question">
-                                    <p><%= question.title %></p>
+                                    <p><%= question.title  %></p>
                                 </div>
                             </div>
                             <div class="actions">
@@ -75,42 +78,15 @@
                                     <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
-                                <a href="#" class="delete" data-id="%= question.id %>">
-                                    <img src="/images/trash.svg" alt="Excluir pergunta">
+                                <a href="#" class="delete" data-id="<%= question.id %>">
+                                    <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
                             </div>
                         </div>
-                        
-                        <% }); %>
-                        
-
-
-
-                    <!-- <div class="question-wrapper">
-                        <div class="question-content">
-                            <div class="user">
-                                <img src="/images/user.svg" alt="Avatar">
-                            </div>
-                            <div class="question">
-                                <p>Você já sabe quais as bases você precisa melhorar para alcançar o próximo nível com maestria? Definiu o seu foco e objetivo para seguir em frente? Estou crioso e embasbacado com sua perseverança por ter alcançado a terceira aula e sei que vai continuar até o fim, então, responde ai pra gente.</p>
-                            </div>
-                        </div>
-                        <div class="actions">
-                            <a href="#" class="check" data-id="3">
-                                <img src="/images/check.svg" alt="Marcar como lida">
-                                Marcar como lida
-                            </a>
-                            <a href="#" class="delete" data-id="3">
-                                <img src="/images/trash.svg" alt="Excluir pergunta">
-                                Excluir
-                            </a>
-                        </div>
-                    </div> -->
-                    
+                    <% });  %>
 
                     <% questionsRead.forEach(questionRead => { %>
-
                         <div class="question-wrapper read">
                             <div class="question-content">
                                 <div class="user">
@@ -121,19 +97,13 @@
                                 </div>
                             </div>
                             <div class="actions">
-                                <!-- <a href="#" class="check">
-                                    <img src="/images/check.svg" alt="Marcar como lida">
-                                    Marcar como lida
-                                </a> -->
                                 <a href="#" class="delete" data-id="<%= questionRead.id %>">
-                                    <img src="/images/trash.svg" alt="Excluir pergunta">
+                                    <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
                             </div>
                         </div>
-
-                    <% }) %>
-
+                    <% }); %>   
 
                 </div>
             </section>
