--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -31,7 +31,7 @@
                     #<%= roomId %>
                     <img src="/images/copy.svg" alt="Copiar número da sala">
                 </div>
-                <a href="#" class="button">
+                <a href="/create-pass" class="button">
                     <img src="/images/users-white.svg" alt="Criar uma sala">
                     Criar sala
                 </a>
@@ -59,9 +59,7 @@
                 <h2 class="sr-only">Perguntas da comunidade</h2>
                 <div class="questions">
                     
-                    <% if (isNoQuestions){ %>
-                        <%- include('parts/no-question') %>
-                    <% } %>
+                   
                     
                     <% questions.forEach(question => { %>                            
                         <div class="question-wrapper">
