--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -59,7 +59,9 @@
                 <h2 class="sr-only">Perguntas da comunidade</h2>
                 <div class="questions">
                     
-                   
+                   <% if (isQuestions) { %>
+                    <%- include("parts/no-question") %>
+                   <% } %>
                     
                     <% questions.forEach(question => { %>                            
                         <div class="question-wrapper">
